fix(ui5-link): fixed text wrapping Base CSS property changed from word-wrap to overflow-wrap to be consistant with UI5 Classic

--- a/packages/main/src/themes/Link.css
+++ b/packages/main/src/themes/Link.css
@@ -52,7 +52,7 @@
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
-	word-wrap: normal;
+	overflow-wrap: normal;
 	outline: none;
 	text-decoration: inherit;
 	color: inherit;
